--- a/app/globals.css
+++ b/app/globals.css
@@ -96,7 +96,7 @@ width: 100%;
 }
 .cart-icon{
   font-size: 25px;
-  color: gray;
+  color: rgb(5, 42, 97);
   cursor: pointer;
   position: relative;
   margin-right: 300px;
@@ -381,7 +381,7 @@ text-align: end;
 }
 .cart-num-items{
   margin-left: 10px;
-  color: #f02d34;
+  color: #4394d6;
 }
 .empty-cart{
   margin:40px;
@@ -543,7 +543,7 @@ padding: 30px 65px;
 }
 .product-detail-desc .quantity{
   display: flex;
-  gap: 20px;
+  gap: 15px;
   margin-top: 10px ;
   align-items: center;
   width: 235px;
@@ -554,7 +554,6 @@ padding: 30px 65px;
 }
 .buttons .add-to-cart{
   padding: 10px 20px;
-  
   margin-top: 40px;
   font-size: 18px;
   font-weight: 500;
@@ -587,7 +586,7 @@ padding: 30px 65px;
 }
 .quantity-desc{
   border: 1px solid gray;
-padding: 6px;
+  padding: 6px;
 }
 .quantity-desc span{
   font-size: 16px;
@@ -600,7 +599,7 @@ padding: 6px;
 }
 .quantity-desc .num{
   border-right: 1px solid gray;
-  font-size: 20px;
+  font-size: 18px;
 }
 .quantity-desc .plus{
   color: rgb(49, 168, 49);
